--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@developer-hub/liquid-glass": "^1.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.6",
@@ -18,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.553.0",
     "maath": "^0.10.8",
     "react": "^19.1.1",
